# Smart-Traffic-Hybrid-Edge-AI-System

./: README.md
Smart_Traffic_Hybrid_System/: STACK.md
Smart_Traffic_Hybrid_System/docs/: HackTM26_STMS.docx
Smart_Traffic_Hybrid_System/jetson-ai/: CMakeLists.txt
Smart_Traffic_Hybrid_System/jetson-ai/include/: mqtt_client.hpp  tracker.hpp  traffic_detector.hpp
Smart_Traffic_Hybrid_System/jetson-ai/src/: cuda_preprocess.cu  main.cpp  mqtt_client.cpp  tracker.cpp  traffic_detector.cpp
Smart_Traffic_Hybrid_System/raspberrypi-gateway/include/: gateway.hpp
Smart_Traffic_Hybrid_System/raspberrypi-gateway/src/: gateway.cpp
Smart_Traffic_Hybrid_System/stm32-realtime/Core/Src/: queue_estimator.c  temporal_filter.c
docs/: HackTM26_STMS.docx
jetson-ai/include/: cuda_preprocess.hpp  tracker.hpp  traffic_detector.hpp
jetson-ai/logs/: log_iA_20260515T120000Z.json  log_iB_20260515T120000Z.json  log_iC_20260515T120000Z.json
jetson-ai/src/: cuda_preprocess.cu  main.cpp  mqtt_client.cpp  tracker.cpp  traffic_detector.cpp
raspberrypi-gateway/include/: route_optimizer.hpp  router.hpp
raspberrypi-gateway/src/: gateway.cpp  main.cpp  route_optimizer.cpp  router.cpp
shared/protocols/: mqtt_topics.md
stm32-realtime/Core/Inc/: queue_estimator.h  temporal_filter.h
stm32-realtime/Core/Src/: queue_estimator.c  temporal_filter.c
